src/test/deca/context/valid/homemade/mutual_notprotected.deca

class A {
    B b;
}

class B {
    A a;
}

{
    A a = new A();
    B b = new B();
    a.b = b;
    b.a = a;
}