src/test/deca/context/invalid/homemade/assign_class.deca
// trying to assign value to class

class A {
}

{
    A = 2;
}